Fix z-index issue.

--- a/styles/Categories.module.css
+++ b/styles/Categories.module.css
@@ -68,7 +68,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 20;
+  z-index: 10;
   transition: all 0.75s ease-in-out;
   background-color: rgba(0, 0, 0, 0.5);
   border: 1px solid #ccc;
