--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -70,7 +70,7 @@
   display: block;
   cursor: pointer;
   position: relative;
-  z-index: 10;
+  z-index: 5;
   background-color: #3f56ad;
 
   font-size: 1rem;
@@ -85,7 +85,7 @@
 }
 
 .slideNavigation {
-  z-index: 999;
+  z-index: 6;
   display: flex;
 }
 
@@ -126,7 +126,7 @@
   bottom: 0;
   margin: auto;
   cursor: pointer;
-  z-index: 500;
+  z-index: 20;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.6);
   padding: 1rem;
